--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oromic Translator — Baga Nagaan Dhuftan:)</title>
+    <script src="https://telegram.org/js/telegram-web-app.js></script>
   </head>
   <body class="dark">
     <div class="bg-gray-100 min-h-screen text-black overflow-hidden dark:bg-[#16182B] dark:text-white" id="root"></div>
